2005-09-28 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Make topology generator generate TE TLVs if necessary.
	  Also take care of inserting dynamic hostname of topology TLVs into
	  cache.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_spf.c: Changing cost from uint16_t to uint32_t. Unset
	  ISIS_ROUTE_FLAG_ACTIVE flag before running SPF.
	* isisd.[ch]: Separate route tables for different levels. SPF is done
	  separately, but in case of L1L2 area they have to be merged.
	* isis_zebra.c: Set/unset ISIS_ROUTE_FLAG_ZEBRA_SYNC flag correctly in
	  case of adding/removing IPv4 routes.
	* zebra_route.c: Rework route validating process. Merging L1 and L2
	  tables in case of L1L2 area.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_spf.[ch]: Added TE TLVs to the SPF process. It seems to work
	  mostly, but needs certainly much more testing, especially transition
	  situation.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Put correct metric info into TE TLV's. Wide metric is
	  used only if only wide metric style (extended TLV's) is in use.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.[ch]: New function tlv_add_in_addr() to put just one IPv4
	  address into TLV. Used for IPv4 address TLV (in case of LSP) and TE
	  router ID TLV.
	* isis_lsp.c: Use tlv_add_in_addr() and include router ID in LSP.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Support for originating TE IS and IPv4 TLV's. No any sub
	  TLV handling yet.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.[ch]: Two new functions - tlv_add_te_is_neighs() and
	  tlv_add_te_ipv4_reachs() to handle TLV's with new metric. None of
	  them handle sub TLVs though for now.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_circuit.[ch]: Some preliminary support for specifying wide
	  circuit metrics. Needs more thinking though, but should do for now.

2005-09-26 Hasso Tepper <hasso at quagga.net>
